--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2"
+  },
+  "production": {
+    "use_env_variable": "DB_NAME",
+    "dialect": "mysql2"
   }
 }
