--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
+    "node": "^23.5.0",
     "sequelize": "^6.35.2"
   },
   "production": {
     "use_env_variable": "DB_NAME",
-    "dialect": "mysql2"
+    "dialect": "mysql"
   }
 }
